fix: impide eliminar la pista 1 en VIdeo, Audio y Subtítulos